--- a/ex34/home.html
+++ b/ex34/home.html
@@ -1,53 +1,15 @@
-<!DOCTYPE html>
 <html>
     <head>
         <title>EX34 - Thảo Linh</title>
-        <style>
-            h2 {
-                color: #999999;
-            }
-
-            .geo {
-                font-family: Arial, sans-serif;
-                font-size: 14pt;
-            }
-
-            .topography {
-                background-color: #CCCCCC;
-                padding-left: 1cm;
-            }
-            .topography b {
-                color: blue;
-            }
-
-            .people {
-                margin-left: 2cm;
-                background-image: url("images/camel.gif");
-                background-repeat: repeat-x;
-            }
-            .people b {
-                color: #FF00FF;
-            }
-
-            .religion {
-                margin-right: 1cm;
-                margin-left: 1cm;
-                text-align: justify;
-                background-color: #CCCCCC;
-            }
-            .religion b {
-                color: #00FFFF;
-                text-decoration: underline;
-            }
-        </style>
     </head>
     <body>
-        <h1>Inline Styles</h1>
+        <h1 style="color: black;">Inline Styles</h1>
         <p><strong>Style Properties:</strong> text, font, background, margin, padding</p>
         <hr/>
 
-        <h2>Vietnam Information</h2>
-        <p class="geo">
+        <h2 style="color:#999999;">Vietnam Information</h2>
+
+        <p style="font-family: Arial, sans-serif; font-size: 14pt; color:black;">
             <b>Geography</b><br>
             Inland area: 330,991 km² <br>
             Continental shelf area: 1,000,000 km² <br>
@@ -57,23 +19,23 @@
             Longitude 08030’ - 23022’ North
         </p>
 
-        <p class="topography">
-            <b>Topography</b><br>
+        <p style="background-color:#CCCCCC; padding-left:1cm; color:black;">
+            <b style="color:blue;">Topography</b><br>
             Three quarters of Vietnam's territory consists of mountainous regions.
             Vietnam has two major deltas (the Red River delta and the Mekong delta)
             and four distinctive mountainous zones each having its own unique features.
         </p>
 
-        <p class="people">
-            <b>People</b><br>
+        <p style="margin-left:2cm; background-image:url('images/camel.gif'); background-repeat:repeat-x; color:black;">
+            <b style="color:#FF00FF;">People</b><br>
             The Vietnamese population exceeds 78.7 million divided in 54 ethnic groups.
             The largest group is the Viet, or Kinh, accounting for 86% of the whole
             population concentrating in the plain areas while minorities occupy the
             highlands and the mountains.
         </p>
 
-        <p class="religion">
-            <b>Religion</b><br>
+        <p style="margin-left:1cm; margin-right:1cm; text-align:justify; background-color:#CCCCCC; color:black;">
+            <b style="color:#00FFFF; text-decoration:underline;">Religion</b><br>
             There is no official religion in Vietnam, but Buddhism is relatively popular.
             Some of the Catholic churches and Buddhist pagodas are interesting tourist
             attractions. There are religions more specific to the southern regions of the
@@ -84,3 +46,4 @@
         <p><i>Copyright © BenThanh Tourist</i></p>
     </body>
 </html>
+
