--- a/ex35/html/home.html
+++ b/ex35/html/home.html
@@ -37,7 +37,7 @@
             </li>
     
             <li>Part 2: Basic of Javascript Programming
-                <ol>
+                <ol start="5">
                     <li>Javascript - Introduction Script
                         <ul>
                             <li>Exercise 01</li>
@@ -64,7 +64,7 @@
             </li>
     
             <li>Part 3: DHTML
-                <ol>
+                <ol start="11">
                     <li>DHTML – Object Model và Collections</li>
                     <li>DHTML – Events Model</li>
                     <li>DHTML – Filters and Transitions</li>
@@ -75,3 +75,4 @@
         <p class="list">Copyright © 2023 - 2024</p>
     </body>
 </html>
+
